--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ $( function()
 	<body>
 		<div id="container">
 			<div id="menu">
-				<h1>Raspberry Pi</h2>
+				<h1 class="menu">Raspberry Pi</h2>
 				<a href="page_rasp_heatsink.html" title="Raspberry Pi 3 aluminum and copper heatsink test">Raspberry Pi 3 Heatsink Test</a><br/>
-				<h1>Other Stuff</h2>
+				<h1 class="menu">Other Stuff</h2>
 				<a href="htmlMQTTViewer/mqtt_dahboard.html" title="Simple Websockets MQTT dashboard">JavaScript MQTT Dashboard</a><br/>
 				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd">Gravatar</a><br/>
 			</div>
