Added Google Codes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="google-site-verification" content="nqrVvXWTno5Z3SP1_XLv_v6a1MJGeh3xJbfxeiSleRw" />
 		<title>struthio.github.io</title>
 		<link rel="stylesheet" type="text/css" href="layout.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -25,6 +26,15 @@ $( function()
 	);
 });
 		</script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-80666514-2', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<div id="container">
@@ -33,7 +43,7 @@ $( function()
 				<a href="page_rasp_heatsink.html" title="Raspberry Pi 3 aluminum and copper heatsink test">Raspberry Pi 3 Heatsink Test</a><br/>
 				<h1 class="menu">Other Stuff</h2>
 				<a href="htmlMQTTViewer/mqtt_dahboard.html" title="Simple Websockets MQTT dashboard">JavaScript MQTT Dashboard</a><br/>
-				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd">Gravatar</a><br/>
+				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd?size=200">Gravatar</a><br/>
 			</div>
 			<div id="preview">
 				<div id="previewTitle"></div>
