--- a/page_rasp_heatsink.html
+++ b/page_rasp_heatsink.html
@@ -49,6 +49,15 @@
 				drawChart("page_rasp_heatsink_cover_stress.json","chartCoverStress");
 			}
 		</script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-80666514-2', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<div class="menuBack"><a id="menu_back" href="index.html">&lt;-BACK</a></div>
