Add link to LED-Strip Preview

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ $( function()
 				<a href="page_rasp_heatsink.html" title="Raspberry Pi 3 aluminum and copper heatsink test">Raspberry Pi 3 Heatsink Test</a><br/>
 				<h1 class="menu">Other Stuff</h2>
 				<a href="htmlMQTTViewer/mqtt_dahboard.html" title="Simple Websockets MQTT dashboard">JavaScript MQTT Dashboard</a><br/>
+				<a href="htmlMQTTViewer/mqttLedPreview.html" title="Preview of LED statun on LED-Strip Temperature Monitor">LED Strip Preview</a><br/>
 				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd?size=200">Gravatar</a><br/>
 			</div>
 			<div id="preview">
