--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ $( function()
 				<h1 class="menu">Other Stuff</h2>
 				<a href="htmlMQTTViewer/mqtt_dahboard.html" title="Simple Websockets MQTT dashboard">JavaScript MQTT Dashboard</a><br/>
 				<a href="htmlMQTTViewer/mqttLedPreview.html" title="Preview of LED statun on LED-Strip Temperature Monitor">LED Strip Preview</a><br/>
+				<a href="htmlMQTTViewer/mqttConditionMonitor.html" title="Condition Manager WebGUI">CM WebGUI</a><br/>
 				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd?size=200">Gravatar</a><br/>
 			</div>
 			<div id="preview">
