Updated Links and added Led Matrix Controller

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@ $( function()
 	<body>
 		<div id="container">
 			<div id="menu">
-				<h1 class="menu">Raspberry Pi</h2>
+				<h1 class="menu">Raspberry Pi</h1>
 				<a href="page_rasp_heatsink.html" title="Raspberry Pi 3 aluminum and copper heatsink test">Raspberry Pi 3 Heatsink Test</a><br/>
-				<h1 class="menu">Other Stuff</h2>
-				<a href="htmlMQTTViewer/mqtt_dahboard.html" title="Simple Websockets MQTT dashboard">JavaScript MQTT Dashboard</a><br/>
-				<a href="htmlMQTTViewer/mqttLedPreview.html" title="Preview of LED statun on LED-Strip Temperature Monitor">LED Strip Preview</a><br/>
-				<a href="htmlMQTTViewer/mqttConditionMonitor.html" title="Condition Manager WebGUI">CM WebGUI</a><br/>
+				<h1 class="menu">MQTT</h1>
+				<a href="htmlMQTTViewer/mqtt_dashboard.html" title="Simple Websockets MQTT dashboard">JavaScript Dashboard</a><br/>
+				<a href="htmlMQTTViewer/mqtt_dashboard_v2.html" title="MQTT Dashboard Version 2">JavaScript Dashboard.v2</a><br/>
+				<a href="htmlMQTTViewer/mqtt_led_preview.html" title="Preview of LED statun on LED-Strip Temperature Monitor">LED Strip Preview</a><br/>
+				<a href="htmlMQTTViewer/mqtt_condition_monitor.html" title="Condition Manager WebGUI">CM WebGUI</a><br/>
+				<a href="htmlMQTTViewer/mqtt_led_matrix.html" title="LED Matrix Controller">Led Matrix Controller</a><br/>
+				<h1 class="menu">Other</h1>
 				<a href="https://pl.gravatar.com/struthio2015" title="img:https://secure.gravatar.com/avatar/b1326f280519791e5470ac57ab7877cd?size=200">Gravatar</a><br/>
 			</div>
 			<div id="preview">
